[gd_scene load_steps=29 format=2]

[ext_resource path="res://Shadow/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Basebat .png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=3]
[ext_resource path="res://Effects/HitEffect.png" type="Texture" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://HP bar/HPBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Effects/PlayerDetectionZone.tscn" type="PackedScene" id=11]
[ext_resource path="res://WhiteShader.shader" type="Shader" id=12]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 12 )
shader_param/active = true

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 12 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "flying ",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 8.0
height = 6.0

[sub_resource type="CircleShape2D" id=13]
radius = 207.463

[sub_resource type="CircleShape2D" id=14]
radius = 4.89136

[sub_resource type="Animation" id=15]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bat:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("bat:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
pause_mode = 1
material = SubResource( 1 )
collision_layer = 16
collision_mask = 2147483656
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="bat" type="AnimatedSprite" parent="."]
pause_mode = 1
material = SubResource( 2 )
scale = Vector2( 0.975308, 1 )
frames = SubResource( 10 )
animation = "flying "
frame = 2
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 11 )
one_way_collision = true

[node name="Hurtbox" parent="." instance=ExtResource( 9 )]
collision_layer = 2147483656

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -12 )
shape = SubResource( 12 )

[node name="Stats" parent="." instance=ExtResource( 10 )]

[node name="HPBar" parent="." instance=ExtResource( 8 )]
margin_left = -14.1324
margin_top = -43.2378
margin_right = 25.8676
margin_bottom = -3.23779

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 11 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.215686 )
shape = SubResource( 13 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1.25992, -14.3587 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0.393982, 4.16843 )
shape = SubResource( 14 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 15 )
anims/Stop = SubResource( 16 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibilityStarted" from="Hurtbox" to="." method="_on_Hurtbox_invincibilityStarted"]
[connection signal="invinciblityEnded" from="Hurtbox" to="." method="_on_Hurtbox_invinciblityEnded"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
